objects/Reset_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>CREATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_JSON__c</fullName>
        <label>Reset JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reset__c</fullName>
        <label>Reset</label>
        <referenceTo>Reset__c</referenceTo>
        <relationshipLabel>Reset Actions</relationshipLabel>
        <relationshipName>Reset_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <formula>Reset__r.Step__r.Name</formula>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>Reset__r.Task__r.Name</formula>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <label>Reset Action</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Reset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reset Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>